docs served by apache. nimsapi redirects to docs.

--- a/apache.conf
+++ b/apache.conf
@@ -1,6 +1,14 @@
 WSGIDaemonProcess nimsapi processes=4 threads=16 maximum-requests=1000 display-name=%{GROUP}
 <Directory /var/local/post/nimsapi>
+    WSGIApplicationGroup %{GLOBAL}
     WSGIProcessGroup nimsapi
 </Directory>
 
 WSGIScriptAlias /nimsapi /var/local/post/nimsapi/nimsapi.wsgi
+
+Alias /nimsapi/docs /var/local/post/docs/_build/html
+
+<Directory /var/local/post/docs/_buid/html>
+   order deny,allow
+   allow from all
+</Directory>
