GAE and internims secured with https and signature.

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,4 +7,5 @@ wsgi-file       = /var/local/nims/nimsapi/nimsapi.wsgi
 processes       = 2
 threads         = 2
 master          = 1
+lazy            = 1
 # vacuum          = 1
