--- a/api/schemas/mongo/project.json
+++ b/api/schemas/mongo/project.json
@@ -2,7 +2,7 @@
     "$schema": "http://json-schema.org/draft-04/schema#",
     "title": "Project",
     "type": "object",
-    "allOf": [{"$ref": "container.json"}],
+    "allOf": [{"$ref": "mongo/container.json"}],
     "properties": {
         "_id": {},
         "created": {},
@@ -17,5 +17,5 @@
 
         "group": {"type": "string"}
     },
-    "additionalProperties": false,
+    "additionalProperties": false
 }
