remove user.root; rename user.wheel to user.root

--- a/bootstrap.json.sample
+++ b/bootstrap.json.sample
@@ -17,7 +17,7 @@
       "email": "user1@example.com",
       "firstname": "First",
       "lastname": "User",
-      "wheel": true
+      "root": true
     }
   ],
   "drones": [
