--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ python:
 - '2.7'
 - '3.3'
 install:
-  - pip install pytest pytest-cov coverage coveralls
-  - pip install -r requirements.txt
-script:   # Add pytest-pep8 when ready, leaving out for the moment
-  - PYTHONPATH=. py.test --cov=api --cov-report=term-missing test/unit_tests/
+  - scripts/setup.sh
+script:
+  - scripts/runtests.sh
 after_success:
   - coveralls
