Run mongod on non-standard port
We don't want to interfere with a system-installed mongod.

--- a/dev.ini
+++ b/dev.ini
@@ -12,7 +12,8 @@ paste.app_factory = api.wsgi:app_factory
 site_id = local
 site_name = Local
 api_uri = 'https://localhost:8080/api'
-db_uri = mongodb://localhost/scitran
+db_uri = mongodb://localhost:9001/scitran
 data_path = persistent/data
 oauth2_id_endpoint = https://www.googleapis.com/plus/v1/people/me/openIdConnect
 drone_secret = ec9bc399334e408082da382694879d22
+insecure = True
