--- a/dev.ini
+++ b/dev.ini
@@ -1,19 +1,8 @@
-[DEFAULT]
-debug = true
-
 [server:main]
 use = egg:Paste#http
 host = 127.0.0.1
 port = 8080
-ssl_pem=*
+ssl_pem=/Users/gsfr/Applications/localhost.pem
 
 [app:main]
-paste.app_factory = api.wsgi:app_factory
-site_id = local
-site_name = Local
-api_uri = 'https://localhost:8080/api'
-db_uri = mongodb://localhost:9001/scitran
-data_path = persistent/data
-oauth2_id_endpoint = https://www.googleapis.com/plus/v1/people/me/openIdConnect
-drone_secret = ec9bc399334e408082da382694879d22
-insecure = True
+paste.app_factory = api.api:app_factory
