--- a/sample.config
+++ b/sample.config
@@ -17,6 +17,8 @@
 #SCITRAN_SITE_SSL_CERT=""
 
 #SCITRAN_PERSISTENT_PATH="./persistent"
+#SCITRAN_PERSISTENT_DATA_PATH="./persistent/data" # for fine-grain control
+#SCITRAN_PERSISTENT_DB_PATH="./persistent/db"     # for fine-grain control
 #SCITRAN_PERSISTENT_DB_PORT=9001
 #SCITRAN_PERSISTENT_DB_URI="mongodb://localhost:$SCITRAN_PERSISTENT_DB_PORT/scitran"
 
