Improve app factory encapsulation

--- a/sample.config
+++ b/sample.config
@@ -5,7 +5,8 @@
 #SCITRAN_SYSTEM_RUNTIME="./runtime"
 #SCITRAN_SYSTEM_SSL_PEM="*"
 
-#SCITRAN_CORE_INSECURE=false
+#SCITRAN_CORE_DEBUG=false                           # emit stack trace on error
+#SCITRAN_CORE_INSECURE=false                        # accept user name as query param
 #SCITRAN_CORE_LOG_LEVEL=debug
 #SCITRAN_CORE_NEWRELIC=none
 
@@ -17,8 +18,8 @@
 #SCITRAN_SITE_SSL_CERT=""
 
 #SCITRAN_PERSISTENT_PATH="./persistent"
-#SCITRAN_PERSISTENT_DATA_PATH="./persistent/data" # for fine-grain control
-#SCITRAN_PERSISTENT_DB_PATH="./persistent/db"     # for fine-grain control
+#SCITRAN_PERSISTENT_DATA_PATH="./persistent/data"   # for fine-grain control
+#SCITRAN_PERSISTENT_DB_PATH="./persistent/db"       # for fine-grain control
 #SCITRAN_PERSISTENT_DB_PORT=9001
 #SCITRAN_PERSISTENT_DB_URI="mongodb://localhost:$SCITRAN_PERSISTENT_DB_PORT/scitran"
 
