Streamline env var names

--- a/sample.config
+++ b/sample.config
@@ -1,9 +1,10 @@
 # vim: filetype=sh
 
-#SCITRAN_SYSTEM_HOST="127.0.0.1"
-#SCITRAN_SYSTEM_PORT="8080"
-#SCITRAN_SYSTEM_RUNTIME="./runtime"
-#SCITRAN_SYSTEM_SSL_PEM="*"
+#SCITRAN_RUNTIME_HOST="127.0.0.1"
+#SCITRAN_RUNTIME_PORT="8080"
+#SCITRAN_RUNTIME_PATH="./runtime"
+#SCITRAN_RUNTIME_SSL_PEM="*"
+#SCITRAN_RUNTIME_BOOTSTRAP="bootstrap.json"
 
 #SCITRAN_CORE_DEBUG=false                           # emit stack trace on error
 #SCITRAN_CORE_INSECURE=false                        # accept user name as query param
