Remove double underscore from site id config

--- a/sample.config
+++ b/sample.config
@@ -12,7 +12,7 @@
 #SCITRAN_CORE_NEWRELIC=none
 #SCITRAN_CORE_DRONE_SECRET=""
 
-#SCITRAN_SITE__ID=""
+#SCITRAN_SITE_ID=""
 #SCITRAN_SITE_NAME=""
 #SCITRAN_SITE_URL=""
 #SCITRAN_SITE_CENTRAL_URL=""
