--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,14 @@
-jsonschema
-markdown
-paste
-pylint
-pymongo
-pyopenssl
-python-dateutil
-pytz
-requests
-tzlocal
-webapp2
-webob
-rfc3987
-nose
-toml
-PasteScript
-pytest
-pytest-cov
-pytest-watch
-coverage
-coveralls
+# Production packages
+Markdown==2.6.5
+WebOb==1.5.1
+functools32==3.2.3-1
+jsonschema==2.5.1
+pymongo==3.2
+python-dateutil==2.4.2
+pytz==2015.4
+requests==2.7.0
+toml==0.9.1
+webapp2==2.5.2
+nose==1.3.7
+PasteScript==2.0.2
+pyOpenSSL==0.15.1
