Sync sample.config with default map in config.py
- add two new variables to sample.config
- update defaults in config.py to be strings as that's how environment
  variables come in by default

--- a/sample.config
+++ b/sample.config
@@ -24,6 +24,8 @@
 #SCITRAN_PERSISTENT_DB_PATH="./persistent/db"       # for fine-grain control
 #SCITRAN_PERSISTENT_DB_PORT=9001
 #SCITRAN_PERSISTENT_DB_URI="mongodb://localhost:$SCITRAN_PERSISTENT_DB_PORT/scitran"
+#SCITRAN_PERSISTENT_DB_CONNECT_TIMEOUT=2000
+#SCITRAN_PERSISTENT_DB_SERVER_SELECTION_TIMEOUT=3000
 
 #SCITRAN_AUTH_AUTH_ENDPOINT=""
 #SCITRAN_AUTH_CLIENT_ID=""
