--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 # Production packages
-Markdown==2.6.5
-WebOb==1.5.1
-functools32==3.2.3-1
 jsonschema==2.5.1
+Markdown==2.6.5
 pymongo==3.2
-python-dateutil==2.4.2
-pytz==2015.4
-requests==2.7.0
-toml==0.9.1
-webapp2==2.5.2
-nose==1.3.7
-PasteScript==2.0.2
 pyOpenSSL==0.15.1
+python-dateutil==2.4.2
+pytz==2015.7
+requests==2.9.1
+rfc3987==1.3.4
+webapp2==2.5.2
+WebOb==1.5.1
