expose stub endpoint for the engine

--- a/api/schemas/input/project.json
+++ b/api/schemas/input/project.json
@@ -2,7 +2,7 @@
     "$schema": "http://json-schema.org/draft-04/schema#",
     "title": "Project",
     "type": "object",
-    "allOf": [{"$ref": "input/container.json"}],
+    "allOf": [{"$ref": "container.json"}],
     "properties": {
         "_id": {},
         "public": {},
