--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pyOpenSSL==0.15.1
 python-dateutil==2.4.2
 pytz==2015.7
 requests==2.9.1
+requests-toolbelt==0.6.0
 rfc3987==1.3.4
 webapp2==2.5.2
 WebOb==1.5.1
