--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
-#See https://github.com/travis-ci/travis-ci/issues/2312 for info on why we need
-# to install python manually
-# Python isn't supported OOTB, so pick a language that makes Travis happy
-language: objective-c
-os: osx
-sudo: false
-env:
-  - SCITRAN_RUNTIME_BOOTSTRAP=test/test_bootstrap.json
+#Travis OSX currently doesn't not support docker (via virtualbox).
+# "This computer doesn't have VT-X/AMD-v enabled."
+sudo: required
+dist: trusty
 install:
-  - brew update
-  - brew install python
+  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+  - sudo sh -c "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list"
+  - sudo apt-get update -qq
+  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y -q docker-engine
+  - sudo curl -o /usr/local/bin/docker-compose -L https://github.com/docker/compose/releases/download/1.6.2/docker-compose-`uname -s`-`uname -m`
+  - sudo chmod +x /usr/local/bin/docker-compose
 before_script:
-  - bin/install.sh --ci
+  - sudo bin/install.sh --ci
 script:
   - bin/runtests.sh unit --ci
   - bin/runtests.sh integration --ci
