--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,18 +1,34 @@
 version: '2'
 services:
-  scitran-core:
+  scitran-base:
     build:
       context: ..
       dockerfile: docker/Dockerfile
+  scitran-core:
+    extends: scitran-base
     links:
       - mongo
     environment:
+      - SCITRAN_CORE_DRONE_SECRET="changeme"
       - SCITRAN_PERSISTENT_DB_URI=mongodb://mongo:27017/scitran
       - SCITRAN_CORE_INSECURE=true
       - SCITRAN_CORE_LOG_LEVEL=debug
+    ports:
+      - "127.0.0.1:8080:8080"
     volumes:
       - .:/var/scitran/test-config
       - ..:/var/scitran/code/api/
+  bootstrap:
+    extends: scitran-base
+    links:
+      - scitran-core
+    environment:
+      - SCITRAN_CORE_DRONE_SECRET="changeme"
+      - SCITRAN_RUNTIME_HOST=scitran-core
+      - SCITRAN_RUNTIME_PORT=8080
+      - SCITRAN_RUNTIME_PROTO=http
+    volumes:
+      - .:/var/scitran/test-config
   mongo:
     image: mongo
   integration-test:
