Intermediate support for reaper
Not happy with baking the pip requirement into the container. Need to think more.
Also, instructions in docker/README.md are broken.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update \
 		python-pip \
 		libffi-dev \
 		libssl-dev \
+		git \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& pip install -U pip
 
@@ -58,11 +59,12 @@ VOLUME /var/scitran/logs
 #
 # Split this out for better cache re-use.
 #
-COPY requirements.txt docker/requirements-docker.txt /var/scitran/code/api/
+COPY requirements.txt requirements_dev.txt docker/requirements-docker.txt /var/scitran/code/api/
 
 RUN pip install --upgrade pip wheel setuptools \
   && pip install -r /var/scitran/code/api/requirements-docker.txt \
-  && pip install -r /var/scitran/code/api/requirements.txt
+  && pip install -r /var/scitran/code/api/requirements.txt \
+  && pip install -r /var/scitran/code/api/requirements_dev.txt
 
 
 # Copy full repo
