Update labels to master branch refs

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,4 +8,4 @@ pytest==2.8.5
 pytest-cov==2.2.0
 pytest-watch==3.8.0
 
-git+https://github.com/scitran/reaper.git@folder-reaper
+git+https://github.com/scitran/reaper.git
