update docs and sample.config
add new ENV required variable

--- a/sample.config
+++ b/sample.config
@@ -16,6 +16,7 @@
 #SCITRAN_SITE_ID=""
 #SCITRAN_SITE_NAME=""
 #SCITRAN_SITE_URL=""
+#SCITRAN_SITE_API_URL=""
 #SCITRAN_SITE_CENTRAL_URL=""
 #SCITRAN_SITE_REGISTERED=""
 #SCITRAN_SITE_SSL_CERT=""
