Add data model v2 changes

--- a/raml/schemas/mongo/project.json
+++ b/raml/schemas/mongo/project.json
@@ -14,7 +14,7 @@
         "label": {},
         "template": {"$ref": "../definitions/project-template.json"},
         "tags": {},
-        "metadata": {},
+        "info": {},
 
         "group": {"type": "string"}
     },
