--- a/raml/schemas/definitions/project.json
+++ b/raml/schemas/definitions/project.json
@@ -6,7 +6,7 @@
             "properties": {
                 "public": {"$ref": "../definitions/container.json#/definitions/public"},
                 "label": {"$ref": "../definitions/container.json#/definitions/label"},
-                "metadata": {"$ref": "../definitions/container.json#/definitions/metadata"},
+                "info": {"$ref": "../definitions/container.json#/definitions/info"},
                 "group":{"$ref":"../definitions/group.json#/definitions/_id"},
                 "archived":     {"$ref":"../definitions/container.json#/definitions/archived"}
             },
@@ -18,7 +18,7 @@
                 "_id": {"$ref":"../definitions/objectid.json#"},
                 "public": {"$ref": "../definitions/container.json#/definitions/public"},
                 "label": {"$ref": "../definitions/container.json#/definitions/label"},
-                "metadata": {"$ref": "../definitions/container.json#/definitions/metadata"},
+                "info": {"$ref": "../definitions/container.json#/definitions/info"},
                 "group":{"$ref":"../definitions/group.json#/definitions/_id"},
                 "created":{"$ref":"../definitions/created-modified.json#/definitions/created"},
                 "modified":{"$ref":"../definitions/created-modified.json#/definitions/modified"},
