Integrate doc building into docker image
- Install pip requirements in Dockerfile
- Pin the versions of the documentation pip packages.
- Rebuild docs on launch of uswgi

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -59,11 +59,12 @@ VOLUME /var/scitran/logs
 #
 # Split this out for better cache re-use.
 #
-COPY requirements.txt docker/requirements-docker.txt /var/scitran/code/api/
+COPY requirements.txt docker/requirements-docker.txt docs/requirements-docs.txt /var/scitran/code/api/
 
 RUN pip install --upgrade pip wheel setuptools \
   && pip install -r /var/scitran/code/api/requirements-docker.txt \
-  && pip install -r /var/scitran/code/api/requirements.txt
+  && pip install -r /var/scitran/code/api/requirements.txt \
+  && pip install -r /var/scitran/code/api/requirements-docs.txt
 
 
 # Copy full repo
