--- a/docker/uwsgi-config.ini
+++ b/docker/uwsgi-config.ini
@@ -6,3 +6,6 @@ master = True
 die-on-term = True
 processes = 4
 threads = 2
+
+static-map = /api/docs=/var/scitran/code/api/docs/build
+static-index = index.html
