--- a/docker/uwsgi-config.ini
+++ b/docker/uwsgi-config.ini
@@ -7,5 +7,7 @@ die-on-term = True
 processes = 4
 threads = 2
 
+
+route-uri = ^/api/docs$ redirect-permanent:/api/docs/http-routingtable.html
+route-uri = ^/api/docs/$ redirect-permanent:/api/docs/http-routingtable.html
 static-map = /api/docs=/var/scitran/code/api/docs/build
-static-index = index.html
