--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ before_script:
 script:
   - bin/runtests.sh unit --ci
   - bin/runtests.sh integration --ci
+  - pylint api
 after_success:
   - coveralls
