Ensure timestamps are not blank strings

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pytz==2015.7
 requests==2.9.1
 requests-toolbelt==0.6.0
 rfc3987==1.3.4
+strict-rfc3339==0.7
 webapp2==2.5.2
 WebOb==1.5.1
 elasticsearch==1.9.0
