Add description to RUNTIME variable sample

--- a/sample.config
+++ b/sample.config
@@ -1,5 +1,6 @@
 # vim: filetype=sh
 
+# RUNTIME vars are only consumed by bin/run.sh and meant for environment setup
 #SCITRAN_RUNTIME_HOST="127.0.0.1"
 #SCITRAN_RUNTIME_PORT="8080"
 #SCITRAN_RUNTIME_PATH="./runtime"
