Explicitly require parent ids in schema

--- a/api/schemas/input/project.json
+++ b/api/schemas/input/project.json
@@ -11,6 +11,6 @@
 
         "group": {"type": "string"}
     },
-    "required": ["label"],
+    "required": ["label", "group"],
     "additionalProperties": false
 }
