--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 script:
   - bin/runtests.sh unit --ci
   - bin/runtests.sh integration --ci
-  - pylint api
+# Disable Warning, Refactor and Convention reports
+  - pylint --disable=W,C,R api
 after_success:
   - coveralls
