--- a/sample.config
+++ b/sample.config
@@ -21,6 +21,9 @@
 #SCITRAN_SITE_REGISTERED=""
 #SCITRAN_SITE_SSL_CERT=""
 
+#SCITRAN_QUEUE_MAX_RETRIES=3,
+#SCITRAN_QUEUE_RETRY_ON_FAIL=false
+
 #SCITRAN_PERSISTENT_PATH="./persistent"
 #SCITRAN_PERSISTENT_DATA_PATH="./persistent/data"   # for fine-grain control
 #SCITRAN_PERSISTENT_DB_PATH="./persistent/db"       # for fine-grain control
