Delay integration tests until core is up

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -40,3 +40,9 @@ services:
       - mongo
     volumes:
       - ./integration_tests:/usr/src/tests
+  core-check:
+    extends: scitran-base
+    links:
+      - scitran-core
+    entrypoint: ''
+    command: curl -sL -k -w "%{http_code}\\n"  "http://scitran-core:8080/api"  -o /dev/null
