--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 script:
   - bin/runtests.sh unit --ci
   - bin/runtests.sh integration --ci
-# Disable Warning, Refactor and Convention reports
-  - pylint --disable=W,C,R api
+# Disable Refactor and Convention reports
+  - pylint --disable=C,R api
 after_success:
   - coveralls
