Add RAML and integration tests
Adds raml/ directory with RAML api spec
Schemas moved from api/schemas to raml/schemas
Add Abao to Travis build for automated integration testing based on API spec
Add Abao test hooks to enable some very basic workflow testing

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -9,4 +9,8 @@ WORKDIR /usr/src/tests
 COPY requirements-integration-test.txt requirements.txt
 RUN pip install -r requirements.txt
 
+# Install node and abao: https://github.com/cybertk/abao
+# Using our fork of abao to expand jsonschema refs
+RUN apt-get update && apt-get -y install nodejs npm && ln -s /usr/bin/nodejs /usr/bin/node && npm install -g git+https://github.com/flywheel-io/abao.git#add-jsonschema-deref
+
 ENTRYPOINT ["py.test"]
