--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,6 +11,8 @@ RUN pip install -r requirements.txt
 
 # Install node for testing tools
 # We need node >= 4.0 for newman so install from node-source repo
+# Need to install apt support for https to access these urls
+RUN apt-get update && apt-get install -y apt-transport-https
 RUN curl --silent https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
 RUN echo "deb https://deb.nodesource.com/5.x trusty main" | tee /etc/apt/sources.list.d/nodesource.list
 RUN echo "deb-src https://deb.nodesource.com/5.x trusty main" |  tee -a /etc/apt/sources.list.d/nodesource.list
