--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -14,8 +14,8 @@ RUN pip install -r requirements.txt
 # Need to install apt support for https to access these urls
 RUN apt-get update && apt-get install -y apt-transport-https
 RUN curl --silent https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
-RUN echo "deb https://deb.nodesource.com/5.x trusty main" | tee /etc/apt/sources.list.d/nodesource.list
-RUN echo "deb-src https://deb.nodesource.com/5.x trusty main" |  tee -a /etc/apt/sources.list.d/nodesource.list
+RUN echo "deb https://deb.nodesource.com/node_5.x trusty main" | tee /etc/apt/sources.list.d/nodesource.list
+RUN echo "deb-src https://deb.nodesource.com/node_5.x trusty main" |  tee -a /etc/apt/sources.list.d/nodesource.list
 RUN apt-get update && apt-get -y install nodejs npm && ln -s /usr/bin/nodejs /usr/bin/node 
 
 # Install abao: https://github.com/cybertk/abao
