npm included with deb from node-source

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y apt-transport-https
 RUN curl --silent https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
 RUN echo "deb https://deb.nodesource.com/node_5.x trusty main" | tee /etc/apt/sources.list.d/nodesource.list
 RUN echo "deb-src https://deb.nodesource.com/node_5.x trusty main" |  tee -a /etc/apt/sources.list.d/nodesource.list
-RUN apt-get update && apt-get -y install nodejs npm && ln -s /usr/bin/nodejs /usr/bin/node 
+RUN apt-get update && apt-get -y install nodejs && ln -s /usr/bin/nodejs /usr/bin/node 
 
 # Install abao: https://github.com/cybertk/abao
 # Using our fork of abao to expand jsonschema refs
