--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ strict-rfc3339==0.7
 uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
+elasticsearch==1.9.0
+-e git://github.com/flywheel-io/gears.git@v1#egg=gear_tools
