--- a/raml/schemas/output/config.json
+++ b/raml/schemas/output/config.json
@@ -9,7 +9,7 @@
           "type": "string"
         },
         "ssl_cert": {
-          "type": "string"
+          "type": ["null", "string"]
         },
         "api_url": {
           "type": "string"
