--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ requests==2.9.1
 requests-toolbelt==0.6.0
 rfc3987==1.3.4
 strict-rfc3339==0.7
+uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
 elasticsearch==1.9.0
