Pin newman to 3.0.1
Newly released newman 3.1.0 broke file fields

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -23,6 +23,6 @@ RUN apt-get update && apt-get -y install nodejs
 RUN npm install -g git+https://github.com/flywheel-io/abao.git#better-jsonschema-ref
 
 # Install newman for running postman collection tests from CLI
-RUN npm install -g newman
+RUN npm install -g newman@3.0.1
 
 ENTRYPOINT ["py.test"]
