Add new fields to mongo schemas

--- a/raml/schemas/mongo/project.json
+++ b/raml/schemas/mongo/project.json
@@ -12,6 +12,7 @@
         "public": {},
         "archived": {},
         "label": {},
+        "template": {"$ref": "../definitions/project-template.json"},
         "tags": {},
         "metadata": {},
 
