Add RAML for ContainerHandler based routes

--- a/raml/schemas/input/project.json
+++ b/raml/schemas/input/project.json
@@ -2,15 +2,6 @@
     "$schema": "http://json-schema.org/draft-04/schema#",
     "title": "Project",
     "type": "object",
-    "allOf": [{"$ref": "container.json"}],
-    "properties": {
-        "public": {},
-        "archived": {},
-        "label": {},
-        "metadata": {},
-
-        "group": {"type": "string"}
-    },
-    "required": ["label", "group"],
-    "additionalProperties": false
+    "allOf": [{"$ref": "../definitions/project.json#/definitions/project-input"}],
+    "required": ["label", "group"]
 }
