fix job endpoints tests after raml rebase

--- a/raml/schemas/definitions/project.json
+++ b/raml/schemas/definitions/project.json
@@ -25,7 +25,8 @@
                 "permissions":{
                     "type":"array",
                     "items":{"$ref":"../definitions/permission.json#"}
-                }
+                },
+                "template":{"$ref":"../definitions/project-template.json#"}
             },
             "additionalProperties": false
         }
