--- a/raml/schemas/definitions/project.json
+++ b/raml/schemas/definitions/project.json
@@ -26,7 +26,7 @@
                     "type":"array",
                     "items":{"$ref":"../definitions/permission.json#"}
                 },
-                "template":{"$ref":"../definitions/project-template.json#"}
+                "template":{"type":"object"}
             },
             "additionalProperties": false
         }
