Add auth type to base config

--- a/sample.config
+++ b/sample.config
@@ -32,6 +32,7 @@
 #SCITRAN_PERSISTENT_DB_CONNECT_TIMEOUT=2000
 #SCITRAN_PERSISTENT_DB_SERVER_SELECTION_TIMEOUT=3000
 
+#SCITRAN_AUTH_AUTH_TYPE=""
 #SCITRAN_AUTH_AUTH_ENDPOINT=""
 #SCITRAN_AUTH_CLIENT_ID=""
 #SCITRAN_AUTH_ID_ENDPOINT=""
