--- a/raml/schemas/definitions/project-template.json
+++ b/raml/schemas/definitions/project-template.json
@@ -9,26 +9,16 @@
                 {"required": ["maximum"]}
             ],
             "properties": {
-                "schema":   {"$ref": "http://json-schema.org/draft-04/schema"},
                 "minimum":  {"type": "integer", "minimum": 0},
                 "maximum":  {"type": "integer", "minimum": 0}
-            },
-            "required": ["schema"]
+            }
         }
     },
     "properties": {
         "session": {
-            "properties": {
-                "schema":   {"$ref": "http://json-schema.org/draft-04/schema"}
-            },
-            "required": ["schema"]
+            "type": "object"
         },
         "acquisitions": {
-            "type": "array",
-            "minItems": 1,
-            "items": {"$ref": "#/definitions/requirement"}
-        },
-        "files": {
             "type": "array",
             "minItems": 1,
             "items": {"$ref": "#/definitions/requirement"}
