Document ubuntu test script, and new config vars

--- a/sample.config
+++ b/sample.config
@@ -7,6 +7,7 @@
 #SCITRAN_RUNTIME_SSL_PEM="*"
 #SCITRAN_RUNTIME_BOOTSTRAP="bootstrap.json"
 
+#SCITRAN_CORE_ACCESS_LOG_ENABLED=false              # user access logging toggle
 #SCITRAN_CORE_DEBUG=false                           # emit stack trace on error
 #SCITRAN_CORE_INSECURE=false                        # accept user name as query param
 #SCITRAN_CORE_LOG_LEVEL=debug
@@ -29,6 +30,7 @@
 #SCITRAN_PERSISTENT_DB_PATH="./persistent/db"       # for fine-grain control
 #SCITRAN_PERSISTENT_DB_PORT=9001
 #SCITRAN_PERSISTENT_DB_URI="mongodb://localhost:$SCITRAN_PERSISTENT_DB_PORT/scitran"
+#SCITRAN_PERSISTENT_DB_LOG_URI="mongodb://localhost:$SCITRAN_PERSISTENT_DB_PORT/logs"
 #SCITRAN_PERSISTENT_DB_CONNECT_TIMEOUT=2000
 #SCITRAN_PERSISTENT_DB_SERVER_SELECTION_TIMEOUT=3000
 
