--- a/raml/schemas/output/config.json
+++ b/raml/schemas/output/config.json
@@ -37,27 +37,31 @@
       "type": "string"
     },
     "auth": {
-      "type": "object",
-      "properties": {
-        "id_endpoint": {
-          "type": "string"
-        },
-        "verify_endpoint": {
-          "type": "string"
-        },
-        "client_id": {
-          "type": "string"
-        },
-        "auth_endpoint": {
-          "type": "string"
+      "type":"object",
+      "patternProperties": {
+        "^[0-9a-z]*$":{
+          "properties": {
+            "id_endpoint": {
+              "type": "string"
+            },
+            "verify_endpoint": {
+              "type": "string"
+            },
+            "client_id": {
+              "type": "string"
+            },
+            "auth_endpoint": {
+              "type": "string"
+            }
+          },
+          "required": [
+            "id_endpoint",
+            "verify_endpoint",
+            "client_id",
+            "auth_endpoint"
+          ]
         }
-      },
-      "required": [
-        "id_endpoint",
-        "verify_endpoint",
-        "client_id",
-        "auth_endpoint"
-      ]
+      }
     },
     "created": {
       "type": "string"
